Поправил содержимое контента курса и get запрос
