# app/Models/CourseModel.php
@@ -6,6 +6,7 @@ use Illuminate\Database\Eloquent\Casts\Attribute;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Database\Eloquent\Relations\HasOne;
 use Illuminate\Database\Eloquent\SoftDeletes;
 use Illuminate\Notifications\Notifiable;
@@ -76,9 +77,9 @@ class CourseModel extends Model
         return $this->belongsTo(User::class, 'author');
     }
 
-    public function contentModel (): HasOne
+    public function contentModel (): HasMany
     {
-        return $this->hasOne(ContentModel::class, 'course_id');
+        return $this->hasMany(ContentModel::class, 'course_id');
     }
 
 }
